fixed broken css for bio and displayName for MyProfilePage

--- a/frontend/src/pages/MyProfilePage.css
+++ b/frontend/src/pages/MyProfilePage.css
@@ -9,9 +9,10 @@
 	height: calc(100vh - 50px);
 	box-sizing: border-box;
 	background-color: white;
+	overflow: hidden;
 	color: black;
 	overflow: hidden;
-	overflow-y: auto
+	overflow-y: auto;
 }
 
 /* Blocking interactions */
@@ -40,7 +41,7 @@
 	position: relative;
 	flex: 0 1 250px;
 	min-width: 150px;
-	background-color: white; 
+	background-color: white;
 	padding: 1rem;
 	display: flex;
 	flex-direction: column;
@@ -66,7 +67,7 @@
 } */
 
 .moon {
-	filter: grayscale(100%)
+	filter: grayscale(100%);
 }
 
 .online-status {
@@ -91,7 +92,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
-	overflow-y: auto; 
+	overflow-y: auto;
 }
 
 .modal-content-profile form {
@@ -120,7 +121,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
-	overflow-y: auto; 
+	overflow-y: auto;
 }
 
 .modal-content-post form {
@@ -162,9 +163,9 @@
 
 .cover-and-posts .cover img {
 	width: 100%;
-  	height: 100%;
-  	object-fit: cover;
-  	display: block;
+	height: 100%;
+	object-fit: cover;
+	display: block;
 }
 
 .modal-actions {
@@ -175,8 +176,8 @@
 }
 
 .btn-group {
-  display: flex;
-  gap: 0.8rem;
+	display: flex;
+	gap: 0.8rem;
 }
 
 .profile-actions {
@@ -207,54 +208,60 @@
 
 /* Post an outfout button */
 .expand-btn-right {
-	margin-left: 30px; 
+	margin-left: 30px;
 }
 
 /* Main content */
 .main-content {
-  display: flex;
-  flex: 1;
+	display: flex;
+	flex: 1;
 }
 
 .menu .menu-avatar {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  cursor: pointer;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	cursor: pointer;
 }
 
 .profile-info .profile-pic img {
-  width: 150px;
-  height: 150px;
-  border-radius: 10%;
+	width: 150px;
+	height: 150px;
+	border-radius: 10%;
 }
 
 .profile-info .display-name {
-  width: 100%;
-  font-weight: bold;
-  font-size: 1.2rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	width: 100%;
+	max-width: 100%;
+	font-weight: bold;
+	font-size: 1.2rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	display: block;
+	overflow: hidden;
+	word-break: break-all;
+	text-align: center;
 }
 
 .profile-info .display-username {
-  font-weight: bold;
+	font-weight: bold;
 }
 
 .profile-info .stats {
-  display: flex;
-  justify-content: center;
-  gap: 3rem;
-  width: 100%;
-  margin-bottom: 1rem;
+	display: flex;
+	justify-content: center;
+	gap: 3rem;
+	width: 100%;
+	margin-bottom: 1rem;
 }
 
 .profile-info .bio {
-  text-align: center;
-  padding: 0.5rem;
-  border-radius: 4px;
+	text-align: center;
+	padding: 0.5rem;
+	border-radius: 4px;
 	white-space: pre-line;
+	word-break: break-word;
 }
 
 .block-user {
@@ -262,9 +269,9 @@
 }
 
 .cover-and-posts .posts {
-  flex: 1;
-  padding: 1rem;
-  overflow-y: auto;
+	flex: 1;
+	padding: 1rem;
+	overflow-y: auto;
 }
 
 .edit-profile-btn {
